--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,18 +2,23 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror -pthread
 
 SRC = main.c philo_parcer.c utiles_funs.c philo_funs.c
+OBJ = $(SRC:.c=.o)
 
 NAME = philo
 
 all: $(NAME)
 	
-$(NAME):
-	$(CC) $(CFLAGS) $(SRC) -o $(NAME)
+$(NAME): $(OBJ)
+	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(NAME)
+	rm -rf $(OBJ)
 
 fclean: clean
+	rm -rf $(NAME)
 
 re:	fclean all
 
